yaml/nginx-login.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myhomegym-login-web
  labels:
    app: myhomegym-login
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myhomegym-login
  template:
    metadata:
      labels:
        app: myhomegym-login
    spec:
      containers:
      - name: nginx
        image: songtaehoon/nginx-web:v1.20
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "250m"
            memory: "250Mi"
          limits:
            cpu: "250m"
            memory: "250Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30100
    protocol: TCP
  selector:
    app: nginx
