yaml/nginx-sign.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myhomegym-sign-web
  labels:
    app: myhomegym-sign
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myhomegym-sign
  template:
    metadata:
      labels:
        app: myhomegym-sign
    spec:
      containers:
      - name: nginx
        image: songtaehoon/nginx-web:v1.20
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "250m"
            memory: "250Mi"
          limits:
            cpu: "250m"
            memory: "250Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30100
    protocol: TCP
  selector:
    app: nginx
