yaml/was-login.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-login
  labels:
    app: tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: tomcat:9.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: svc-was
spec:
  type: ClusterIP
  clusterIP: 10.110.0.100
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: myhomegym-was
