yaml/was-main1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-main
  labels:
    app: myhomegym-was
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  replicas: 3
  selector:
    matchLabels:
      app: myhomegym-was
  template:
    metadata:
      labels:
        app: myhomegym-was
    spec:
      containers:
      - name: was
        image: kku9/web-roll:14
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "250m"
            memory: "500Mi"
          limits:
            cpu: "250m"
            memory: "500Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: svc-was
spec:
  type: ClusterIP
  clusterIP: 10.110.0.100
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: myhomegym-was
