yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myhomegym
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # path의 /hostname에서 획득한 경로를 전달
    # rewrite-target은 /hostname(path)이라는 경로로 시작하는 모든 요청을 hostname-service(name)의 /로 전달
spec:
  ingressClassName: nginx # nginx-ingress 컨트롤러의 클래스 이름
  rules:
  - host: www.taehoone.shop
    http:
      paths:
      - path: /login.jsp
        pathType: Prefix
        backend:
          service:
            name: myhomegym-login
            port:
              number: 8080
      - path: /signup.jsp  # 요청 패스
        pathType: Prefix  # 패스 유형
        backend:
          service:
            name: myhomegym-product  # 서비스 이름
            port:
              number: 8080  # 서비스 포트
      - path: /index.jsp
        pathType: Prefix
        backend:
          service:
            name: myhomegym-sign
            port:
              number: 8080
